# PingMe

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml
docs/: app.py  asyncapi.yml  openapi.yml  test.py
enums/: ConversationType.py  Roles.py
migrations/: env.py
migrations/versions/: 2025_02_02_2039-b26aa53191da_add_trigram_extension.py  2025_02_02_2127-50353d6386ee_create_basic_database.py  2025_04_14_0011-36d7c59c9aac_update_relationships.py  2025_11_30_2318-add_last_seen_and_fcm_token.py  2025_12_01_0032-make_media_message_id_required.py  2025_12_06_2217-029c76a9d3cf_make_conversation_name_optional.py  2025_12_07_2319-33cbd4d8b6de_make_idx_for_user_conversation.py  2025_12_07_2338-60f6d23d9c1e_add_avatar_for_users.py  2025_12_07_2342-fix_media_constraint_for_avatars.py  2025_12_08_0011-add_conversation_avatar_support.py
models/: BaseModel.py  contacts.py  conversations.py  media.py  messages.py  pings.py  stories.py  tokens.py  user_conversation.py  users.py
src/: main.py
src/application/interfaces/: cache.py  email.py  repositories.py
src/application/services/: auth_service.py  conversation_service.py  media_service.py  message_service.py  user_service.py
src/core/: config.py  logging.py  middleware.py  startup.py
src/infrastructure/cache/redis/: auth_cache.py  connection.py  redis_cache.py
src/infrastructure/database/: session.py
src/infrastructure/database/enums/: AuthProviders.py  ConversationType.py  MailingMethods.py  Roles.py
src/infrastructure/database/models/: BaseModel.py  contacts.py  conversations.py  media.py  messages.py  pings.py  stories.py  tokens.py  user_conversation.py  users.py
src/infrastructure/database/repositories/: base.py  conversation_repo.py  media_repository.py  message_repository.py  user_repository.py
src/infrastructure/email/: smtp_service.py  templates.py
src/infrastructure/fcm/: __init__.py  service.py
src/infrastructure/security/: jwt.py
src/infrastructure/websocket/: __init__.py  connection_manager.py  handler.py  rate_limiter.py
src/infrastructure/yandex/s3/: manager.py
src/presentation/api/: __init__.py
src/presentation/api/dependencies/: __init__.py  services.py
src/presentation/api/guards/: jwt_guard.py
src/presentation/api/middlewares/: jwt_guard.py
src/presentation/api/system/: router.py
src/presentation/api/v1/: __init__.py
src/presentation/api/v1/auth/: router.py
src/presentation/api/v1/conversations/: router.py
src/presentation/api/v1/media/: router.py
src/presentation/api/v1/messages/: __init__.py  router.py
src/presentation/api/v1/users/: router.py
src/presentation/api/v1/websocket/: __init__.py  router.py
src/presentation/middlewares/: logging.py  ws_logging.py
src/presentation/schemas/: auth.py  conversations.py  messages.py  responses.py  system.py  tokens.py  users.py  websocket.py
src/presentation/utils/: errors.py
tests/: README_WEBSOCKET.md  test_websocket_client.py
